# EasyConfig

./: README.md  pyproject.toml  test_config.py
.github/workflows/: pytest.yml
easyconfig/: DOCUMENTATION.md  __init__.py
easyconfig/Objects/: __init__.py
