[tool.poetry]
name = "easyconfig"
version = "4.3.0"
description = "This project aims to simplify the process of generating and handling Json Config file"
authors = ["Vortex5Root"]
license = "Apachev2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pathlib = "^1.0.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"